--- a/_config.yml
+++ b/_config.yml
@@ -14,29 +14,29 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: my9854 # the main title
+title: implanttips # the main title
 
 tagline: 실시간 뉴스를 보다 신속하게 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  실시간 뉴스를 보다 신속하게 제공하는 my9854 입니다.
+  실시간 뉴스를 보다 신속하게 제공하는 implanttips 입니다.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://my9854.github.io"
+url: "https://implanttips.github.io"
 
 github:
-  username: my9854 # change to your github username
+  username: implanttips # change to your github username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: my9854
+  name: implanttips
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/my9854 # change to your github homepage
+    - https://github.com/implanttips # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
